change notebutton breakpoints to prevent text wrapping

--- a/src/components/NoteButtons.module.css
+++ b/src/components/NoteButtons.module.css
@@ -1,9 +1,13 @@
 .wrapper {
   display: grid;
   gap: 8px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 
-  @media (min-width: 500px) {
+  @media (min-width: 400px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media (min-width: 600px) {
     grid-template-columns: repeat(6, 1fr);
   }
 }
